unpackaged/main/default/objects/Audit_Rule_Critieria__c/Audit_Rule_Critieria__c.object-meta.xml
<CustomObject>
    <label>Audit Rule Critieria</label>
    <nameField>
        <displayFormat>ARC-{0000000000}</displayFormat>
        <label>Audit Rule Critieria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Rule Critieria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>