unpackaged/main/default/objects/Audit_Rule_Critieria__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Entity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product_Code__c</fullName>
                <label>Service Item Code</label>
            </value>
            <value>
                <fullName>Code__c</fullName>
                <label>Trouble Code</label>
            </value>
            <value>
                <fullName>Resolution_Code__c</fullName>
                <label>Resolution Code</label>
            </value>
            <value>
                <fullName>Vehicle_Type__c</fullName>
                <label>Vehicle Type</label>
            </value>
            <value>
                <fullName>Membership_Benefit_Level__c</fullName>
                <label>Membership Level</label>
            </value>
            <value>
                <fullName>Cleared_Timestamp__c</fullName>
                <label>Cleared Time Stamp</label>
            </value>
            <value>
                <fullName>Dispatch_Method__c</fullName>
                <label>Dispatch Method</label>
            </value>
            <value>
                <fullName>Long_Tow__c</fullName>
                <label>Long Tow</label>
            </value>
            <value>
                <fullName>Call_Source__c</fullName>
                <label>Call Source</label>
            </value>
            <value>
                <fullName>Facility_Number__c</fullName>
                <label>Facility Nbr</label>
            </value>
            <value>
                <fullName>Clearing_Code__c</fullName>
                <label>Clearing Code</label>
            </value>
            <value>
                <fullName>T_Code__c</fullName>
                <label>T-Code</label>
            </value>
            <value>
                <fullName>Call_Type__c</fullName>
                <label>Call Type</label>
            </value>
            <value>
                <fullName>Is_Fleet__c</fullName>
                <label>Is Fleet</label>
            </value>
            <value>
                <fullName>Unit__c</fullName>
                <label>Quantity</label>
            </value>
            <value>
                <fullName>Cost__c</fullName>
                <label>Cost</label>
            </value>
            <value>
                <fullName>On_Location_Duration__c</fullName>
                <label>On Location Duration</label>
            </value>
            <value>
                <fullName>Service_Vehicle__c</fullName>
                <label>Truck Type</label>
            </value>
            <value>
                <fullName>Comm_Ctr__c</fullName>
                <label>Comm Ctr</label>
            </value>
            <value>
                <fullName>In_Tow_Timestamp__c</fullName>
                <label>In Tow Timestamp</label>
            </value>
            <value>
                <fullName>On_Location_Timestamp__c</fullName>
                <label>On Location Timestamp</label>
            </value>
            <value>
                <fullName>Breakdown_Address__c</fullName>
                <label>Breakdown Location</label>
            </value>
            <value>
                <fullName>Landmark__c</fullName>
                <label>Breakdown Landmark</label>
            </value>
            <value>
                <fullName>Premier_Battery_Entitled__c</fullName>
                <label>Premier Battery Eligible</label>
            </value>
            <value>
                <fullName>AAA_Battery_Consumed__c</fullName>
                <label>Battery Benefit Consumed</label>
            </value>
            <value>
                <fullName>Call_Id__c</fullName>
                <label>Call Id</label>
            </value>
            <value>
                <fullName>Clear_Duration__c</fullName>
                <label>Clear Duration</label>
            </value>
            <value>
                <fullName>Dispatch_Duration__c</fullName>
                <label>Dispatch Duration</label>
            </value>
            <value>
                <fullName>Enroute_Duration__c</fullName>
                <label>Enroute Duration</label>
            </value>
            <value>
                <fullName>In_Tow_Duration__c</fullName>
                <label>In Tow Duration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>