unpackaged/main/default/objects/Audit_Rule_Critieria__c/fields/Audit_Rule__c.field-meta.xml
<CustomField>
    <fullName>Audit_Rule__c</fullName>
    <label>Audit Rule</label>
    <referenceTo>Audit_Rule__c</referenceTo>
    <relationshipLabel>Audit Rule Critieria</relationshipLabel>
    <relationshipName>Audit_Rule_Critieria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>