unpackaged/main/default/objects/Audit_Rule_Critieria__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <label>Business Entity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkOrder</fullName>
                <label>Work Order</label>
            </value>
            <value>
                <fullName>Case</fullName>
                <label>Service Call</label>
            </value>
            <value>
                <fullName>ServiceTerritory</fullName>
                <label>Facility</label>
            </value>
            <value>
                <fullName>Account</fullName>
                <label>Member</label>
            </value>
            <value>
                <fullName>FSL_Service_Line_Item__c</fullName>
                <label>Service Line Item</label>
            </value>
            <value>
                <fullName>FSL_Member_Vehicle__c</fullName>
                <label>Member Vehicle</label>
            </value>
            <value>
                <fullName>FSL_TroubleCode__c</fullName>
                <label>TroubleCode</label>
            </value>
            <value>
                <fullName>ServiceContract</fullName>
                <label>Service Contract</label>
            </value>
            <value>
                <fullName>Location</fullName>
                <label>Vehicle</label>
            </value>
            <value>
                <fullName>ServiceResource</fullName>
                <label>Service Resource</label>
            </value>
            <value>
                <fullName>Entitlement</fullName>
                <isActive>false</isActive>
                <label>Entitlement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>